# CMsFramework

./: .gitignore  CMake instructions.txt  CMsFramework.sln  Git instructions.txt  README.md
Framework/: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  CMsFramework.sln  CMsFramework.vcxproj  CMsFramework.vcxproj.filters  cmake_install.cmake  createSolutions.bat  removeSolutions.bat
Framework/CMsFramework.dir/Debug/: CMsFramework.exe.recipe  vc143.idb
Framework/CMsFramework.dir/Debug/CMsFramework.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CMsFramework.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Framework/Debug/: CMsFramework.exp  CMsFramework.lib
Framework/Sources/: GeneralMain.cpp  Main.cpp  MainIncludes.hpp
Framework/Sources/BasicsRendering/: Polygons2D.hpp
Framework/Sources/Composites/Autopilot/: Autopilot.hpp  AuxAutopilot.hpp  Icons.hpp  Meteo.hpp  ShipMRS.hpp
Framework/Sources/Composites/MRS/: MainMRS.hpp  Meteo.hpp  ShipMRS.hpp
Framework/Sources/Composites/OpenCascade/: MainOC.hpp  ShapeRenderer.hpp
Framework/Sources/Composites/Telemetry/: Light.hpp
Framework/Sources/Core/: KeyMouseImputs.hpp  Settings.hpp  Time.hpp  shader.cpp
Framework/Sources/Deprecated/: Globe.hpp
Sources/: CMsFramework.sln
Sources/CMsFramework/: CMsFramework.vcxproj  CMsFramework.vcxproj.filters
Sources/CMsFramework/x64/Debug/: CMsFramework.exe.recipe  CMsFramework.ilk  vc143.idb
Sources/CMsFramework/x64/Debug/CMsFramework.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  (+6 more)
